# articles

./: .buildinfo  .pre-commit-config.yaml  README.html  README.md  _toc.yml  genindex.html  intro.html  intro.md  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: page.yaml
_sources/: intro.md
_sources/authors/: ever-vino.md
articles/0.058-r-maps-ggplot/: readme.md
articles/0001-ciencia_abierta/: ciencia_abierta.html
articles/0002-GitCeroACien/: GitCeroACien.html  GitCeroACien.md
articles/0003-investigacion_colaborativa/: investigacion_colaborativa.html  investigacion_colaborativa.md
articles/0004-que-es-jupyter/: que-es-jupyter.html  que-es-jupyter.md
articles/0005-investigacion_abierta_ciencias/: investigacion_abierta_ciencias.html  investigacion_abierta_ciencias.md
articles/0006-LenguajeR/: LenguajeR.html  LenguajeR.md
articles/0007-datosabiertos/: datosabiertos.html  datosabiertos.md
articles/0008-5gestion_datos/: 5gestion_datos.html  5gestion_datos.md
articles/0009-investigacion_colaborativa_con_git/: investigacion_colaborativa_con_git.html  investigacion_colaborativa_con_git.md
articles/0010-manejodecienciaabierta/: manejodecienciaabierta.html  manejodecienciaabierta.md
articles/0011-10razonesparausarpython/: 10razonesparausarpython.html  10razonesparausarpython.md
articles/0012-5Repositorios/: 5Repositorios.html  5Repositorios.md
articles/0013-acceso_abierto/: acceso_abierto.html  acceso_abierto.md
authors/: alan-hurtarte.html  alan-hurtarte.md  ever-vino.html
conda/: dev.yaml
(+127 files in other folders)
