[tool.poetry]
name = "osl-articles"
version = "0.1.0"
description = ""
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
license = "CC-BY-SA"

[tool.poetry.dependencies]
python = "^3.10"
jupyter-book = "^0.12.1"
Sphinx = "^4.4.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
